--- a/package.json
+++ b/package.json
@@ -25,24 +25,25 @@
   },
   "dependencies": {
     "axios": "0.18.1",
-    "core-js": "^3.19.1",
-    "cross-env": "^7.0.3",
-    "element-ui": "^2.15.7",
+    "core-js": "3.19.1",
+    "cross-env": "7.0.3",
+    "dhtmlx-gantt": "7.1.9",
+    "element-ui": "2.15.7",
     "js-cookie": "2.2.0",
-    "md5": "^2.2.1",
-    "dhtmlx-gantt": "^7.1.9",
+    "md5": "2.2.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
-    "vue-quill-editor": "^3.0.6",
+    "vue-clipboard2": "0.3.3",
+    "vue-quill-editor": "3.0.6",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "vuex-persistedstate": "^4.0.0",
-    "yyd-decimal": "^9.0.1"
+    "vuex-persistedstate": "4.0.0",
+    "yyd-decimal": "9.0.1"
   },
   "devDependencies": {
-    "@tsign/eslint-config-esign": "^2.3.6",
+    "@tsign/eslint-config-esign": "2.3.6",
     "@vue/cli-plugin-babel": "4.4.4",
     "@vue/cli-plugin-eslint": "4.4.4",
     "@vue/cli-plugin-unit-jest": "4.4.4",
