淘宝npm镜像源换新地址

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,1 @@
-registry=https://registry.npm.taobao.org/
-@tsign:registry=http://118.31.173.195:4873/
-@esign:registry=http://118.31.173.195:4873/
-@esign-ui:registry=http://118.31.173.195:4873/
+registry=https://registry.npmmirror.com
