--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
+  "arrowParens": "always",
   "htmlWhitespaceSensitivity": "ignore"
 }
